--- a/symphony/assets/admin.css
+++ b/symphony/assets/admin.css
@@ -368,6 +368,14 @@ div.password {
 	z-index: 1000;
 }
 
+@media screen and (max-width: 700px) {
+
+	div.password {
+		padding: 0;
+	}
+
+}
+
 /* Settings: Pickable */
 
 .active .settings.picker {
