--- a/symphony/assets/symphony.basic.css
+++ b/symphony/assets/symphony.basic.css
@@ -105,20 +105,34 @@ label {
 	display: block;
 	margin-bottom: 15px;
 }
-label input {
-	padding: 2px;
-}
+input[type=text],
 textarea,
-label input {
-	margin-top: 2px;
-	width: 100%;
-	font-size: 109.09%;
-	font-family: inherit;
+select[multiple] {
+	padding: 2px;
+	border: 1px solid rgba(0, 0, 0, 0.25);
+	box-shadow: inset 0 1px 2px #ddd;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	-ms-box-sizing: border-box;
 	-o-box-sizing: border-box;
 	box-sizing: border-box;
+	margin-top: 2px;
+	width: 100%;
+	font-size: 109.09%;
+	font-family: inherit;
+}
+input[type=text] {
+	height: 22px;
+}
+input[type=text]:active,
+input[type=text]:focus,
+textarea:active,
+textarea:focus,
+select[multiple]:active,
+select[multiple]:focus {
+	outline: none;
+	border-color: rgba(0, 0, 0, 0.4);
+	box-shadow: 0 0 7px rgba(0, 0, 0, 0.05), 0 0 1px 2px rgba(77, 120, 180, 0.1);
 }
 select {
 	width: 100%;
@@ -133,6 +147,7 @@ select {
 select[multiple] {
 	width: 100%;
 	height: 10em;
+	padding: 0;
 }
 input[size],
 input[type=radio],
