--- a/symphony/assets/symphony.buttons.css
+++ b/symphony/assets/symphony.buttons.css
@@ -48,7 +48,7 @@ input[type=submit][disabled=disabled]:focus {
 
 button.create,
 .button.create {
-	background-color: none;
+	background-color: #83b340;
 	background-image: -webkit-linear-gradient(top, #92c44d 0%, #92c44d 30%, #78a737 100%);
 	background-image:    -moz-linear-gradient(top, #92c44d 0%, #92c44d 30%, #78a737 100%);
 	background-image:     -ms-linear-gradient(top, #92c44d 0%, #92c44d 30%, #78a737 100%);
