--- a/symphony/assets/symphony.basic.css
+++ b/symphony/assets/symphony.basic.css
@@ -108,7 +108,7 @@ label {
 input[type=text],
 textarea,
 select[multiple] {
-	padding: 2px;
+	padding: 2px 5px;
 	border: 1px solid rgba(0, 0, 0, 0.25);
 	box-shadow: inset 0 1px 2px #ddd;
 	-webkit-box-sizing: border-box;
