--- a/symphony/assets/symphony.grids.css
+++ b/symphony/assets/symphony.grids.css
@@ -103,3 +103,9 @@ form.columns .column.primary {
 	box-shadow: 0 1px 2px rgba(204, 51, 17, 0.3);
 	padding: 0 10px 10px;
 }
+
+/* Specials */
+
+.columns .column.justified input[type=checkbox] {
+	margin-top: 23px;
+}
