--- a/symphony/assets/css/symphony.forms.css
+++ b/symphony/assets/css/symphony.forms.css
@@ -199,9 +199,8 @@ button.delete:focus,
 .button.delete:hover,
 .button.delete:active,
 .button.delete:focus {
-	background: #bd2c1f;
-	border-color: #912218;
-	box-shadow: 0 0 5px rgba(0, 0, 0, 0.4), 0 0 1px 1px rgba(255, 255, 255, 0.9);
+	background: #dd4422;
+	border-color: #bb2211;
 	color: #fff;
 }
 
