--- a/symphony/assets/css/admin.css
+++ b/symphony/assets/css/admin.css
@@ -186,11 +186,11 @@
 #context {
 	clear: both;
 	margin: 0;
-	padding: 25px 18px 20px;
+	padding: 25px 18px 0;
 	position: relative;
 	color: #000;
-	min-height: 18px;
-	z-index: 1;
+	min-height: 38px;
+	z-index: 1000;
 }
 
 #context:after {
