--- a/symphony/assets/css/symphony.tabs.css
+++ b/symphony/assets/css/symphony.tabs.css
@@ -5,64 +5,117 @@
  */
 
 
-.tabs {
-	list-style-type: none;
-	padding: 15px 0 0 0;
-	margin: 0 0 -20px -11px;
-	width: 100%;
+ul.tabs {
 	clear: both;
-	position: relative;
-}
-
-.tabs li {
 	list-style-type: none;
-	display: inline-block;
-	padding: 5px 10px 2px;
-	margin: 0 5px 0 0;
-	cursor: pointer;
-	background: rgba(0, 0, 0, 0.03);
-	-moz-border-radius: 5px 5px 0 0;
-	-webkit-border-radius: 5px 5px 0 0;
-	border-radius: 5px 5px 0 0;
-	border: 1px solid #ddd;
-	color: #666;
+	margin: 40px 0 0 -11px;
+	padding: 0;
+	height: 23px;
 	position: relative;
 	top: 1px;
 }
 
-.tabs li:hover {
-	background: rgba(255, 255, 255, 0.4);
-}
-
-.tabs li.selected {
-	background-color: #fff;
-	border-bottom: 1px solid #fff;
-}
-
-.tabs li.invalid {
-	background: #eb6347;
-	border: 1px solid #c31;
-	color: #fff;
-}
-
-.tabs li.invalid span {
-	background-color: #aaa;
-	color: #fff;
-	display: inline-block;
-	font-weight: bold;
-	font-family: "Times New Roman", Times, serif;
-	font-size: 11px;
-	padding: 1px 5px;
-	-moz-border-radius: 8px;
-	-webkit-border-radius: 8px 8px;
-	border-radius: 8px 8px;
-	line-height: 1;
-	margin: 0 -5px 0 5px;
+ul.tabs li {
+	list-style-type: none;
+	float: left;
+	margin: 0 3px 0 0;
+	cursor: pointer;
+	background: #fafafa;
+	border-radius: 4px 4px 0 0;
+	border: 1px solid rgba(0, 0, 0, 0.1);
+	border-bottom-color: #d5d5d0;
+	color: rgba(0, 0, 0, 0.5);
+	height: 24px;
 	position: relative;
-	top: -1px;
+	padding: 4px 10px 0;
+	cursor: pointer;
+	display: block;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-ms-box-sizing: border-box;
+	-o-box-sizing: border-box;
+	box-sizing: border-box;
 }
 
-.tabs li:hover span,
-.tabs li.selected span {
-	background-color: #dd4422;
+ul.tabs li:hover {
+	background: #f5f5f5;
+	border: 1px solid rgba(0, 0, 0, 0.2);
+	border-bottom-color: #c4c4c4;
+	color: rgba(0, 0, 0, 0.65);
+}
+
+ul.tabs li.selected, 
+ul.tabs li.invalid.selected,
+ul.tabs li.invalid.selected:hover {
+	background: #fff;
+	border: 1px solid rgba(0, 0, 0, 0.2);
+	border-bottom-color: #fff;
+	color: rgba(0, 0, 0, 0.8);
+	text-shadow: none;
+	z-index: 1000;
+}
+
+ul.tabs li.selected:before {
+	content: "";
+	width: 3px;
+	height: 3px;
+	position: absolute;
+	left: -4px;
+	bottom: -1px;
+	display: block;
+	border-radius: 0 0 2px 0;
+	border: none;
+	border-bottom: 1px solid #ccc;
+	border-right: 1px solid #ccc;
+}
+
+ul.tabs li.selected:after {
+	content: "";
+	width: 3px;
+	height: 3px;
+	position: absolute;
+	right: -4px;
+	bottom: -1px;
+	display: block;
+	border-radius: 0 0 0 2px;
+	border: none;
+	border-bottom: 1px solid #ccc;
+	border-left: 1px solid #ccc;
+}
+
+/* Destructor */
+
+ul.tabs li a.destructor, 
+ul.tabs li.selected.invalid a.destructor {
+	line-height: 1;
+	text-decoration: none;
+	color: rgba(0, 0, 0, 0.15);
+	text-shadow: 1px 1px #fff;
+	padding: 0 0 0 5px;
+	margin: 0 -4px 0 0;
+}
+
+ul.tabs li:hover a.destructor,
+ul.tabs li.selected.invalid:hover a.destructor {
+	color: rgba(0, 0, 0, 0.2);
+}
+
+ul.tabs li a.destructor:hover, 
+ul.tabs li.selected a.destructor:hover {
+	color: rgba(0, 0, 0, 0.5);
+}
+
+/* Invalid tabs */
+
+ul.tabs li.invalid {
+	background: #dd4422;
+	border-color: #bb2211;
+	color: #fb9;
+	text-shadow: 1px 1px 1px rgba(187, 34, 17, 1);
+	box-shadow: none;
+}
+
+ul.tabs li.invalid a.destructor {
+	color: #fb9;
+	text-shadow: none;
 }
