make horizontal drawer animations smooth

--- a/symphony/assets/css/admin.css
+++ b/symphony/assets/css/admin.css
@@ -243,7 +243,6 @@ ul.tags .more:hover {
 
 div.drawer.horizontal {
 	position: relative;
-	margin-top: 35px;
 	width: 100%;
 	clear: both;
 }
@@ -256,6 +255,7 @@ div.drawer.horizontal:after {
 	height: 0;
 }
 	div.drawer.horizontal .contents {
+		margin-top: 17px;
 		padding-top: 20px;
 		border-top: 1px solid rgba(0, 0, 0, 0.05);
 	}
@@ -772,8 +772,13 @@ div.notifier nav:hover:before {
 	padding: 0;
 	float: left;
 }
-#breadcrumbs {
-	float: left;
+#breadcrumbs:after {
+	content: ' ';
+	visibility: hidden;
+	display: block;
+	font-size: 0;
+	clear: both;
+	height: 0;
 }
 #breadcrumbs a, #breadcrumbs span {
 	padding: 0;
