--- a/symphony/assets/css/symphony.tables.css
+++ b/symphony/assets/css/symphony.tables.css
@@ -117,6 +117,18 @@ table.selectable input {
 	display: none;
 }
 
+table.selectable td {
+	cursor: pointer;
+}
+
+tr:hover td {
+	background-color: #f2f2f2;
+}
+
+tr:hover:nth-child(even) td {
+	background-color: #fafafa;
+}
+
 tr.selected td {
 	background-color: #668abe;
 	background-image: -webkit-linear-gradient(top, #668abe, #5c83ba);
