--- a/symphony/assets/css/symphony.tables.css
+++ b/symphony/assets/css/symphony.tables.css
@@ -147,6 +147,16 @@ tr.selecting a {
 	color: #fff;
 }
 
+tr.selected td a:hover {
+	color: white;
+	border-bottom-color: rgba(255, 255, 255, 0.5);
+}
+
+tr.selected td a:focus {
+	color: white;
+	border-bottom-color: white;
+}
+
 tr.selected .inactive {
 	color: rgba(255, 255, 255, 0.6);
 }
