Further border-bottom related tweaks

--- a/symphony/assets/css/admin.css
+++ b/symphony/assets/css/admin.css
@@ -578,13 +578,14 @@ div.field-checkbox:first-child {
 .file em {
 	float: right;
 	color: #998;
-	text-decoration: underline;
+	border-bottom: 1px solid rgba(153, 153, 136, 0.3);
 	font-style: normal;
 	cursor: pointer;
 }
 
 .file em:hover {
-	color: #d43;
+	color: #d42;
+	border-bottom-color: rgba(221, 68, 34, 0.3);
 }
 
 /* Actions */
