Allow inline .frames to be used not only SPAN and FIELDSET, but any element.inline. Could not add div.frame selector because this is used elsewhere. Unfortunately .frame is not used in an OOCSS way, so adding .inline.frame circumvents this.

--- a/symphony/assets/css/symphony.frames.css
+++ b/symphony/assets/css/symphony.frames.css
@@ -36,7 +36,8 @@
 --------------------------------------------------------------------------*/
 
 span.frame,
-fieldset.frame {
+fieldset.frame,
+.frame.inline {
 	display: block;
 	margin-bottom: 15px;
 	border: 1px solid rgba(0, 0, 0, 0.2);
