Arrange inline images in tables

--- a/symphony/assets/css/symphony.tables.css
+++ b/symphony/assets/css/symphony.tables.css
@@ -109,6 +109,10 @@ table + fieldset {
 	margin-top: 50px !important;
 }
 
+td img {
+	vertical-align: middle;
+}
+
 /*-----------------------------------------------------------------------------
 	Selectable rows
 -----------------------------------------------------------------------------*/
