--- a/symphony/assets/css/symphony.grids.css
+++ b/symphony/assets/css/symphony.grids.css
@@ -53,6 +53,10 @@
 	padding: 0 5px 0 15px !important;
 }
 
+.columns legend + * {
+	margin-top: 10px;
+}
+
 /* Unequal columns */
 
 form.columns {
@@ -81,12 +85,12 @@ form.columns .column.primary {
 	.two.columns .column.secondary {
 		width: 100%;
 	}
-	
+
 	.two.columns .column.secondary {
 		padding: 0;
 		border-top: 1px solid rgba(0, 0, 0, 0.1);
 	}
-	
+
 	.two.columns .column.secondary p.label {
 		margin-top: 10px;
 	}
